[gd_scene load_steps=2 format=3 uid="uid://c8wqavxm6m0q"]

[ext_resource type="Script" path="res://Scenes/Components/Hitbox/hitbox_component.gd" id="1_brwcp"]

[node name="HitboxComponent" type="Area2D"]
script = ExtResource("1_brwcp")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
